--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "export NODE_ENV=development || set NODE_ENV=development&& ts-node-dev --respawn ./src/index.ts"
   },
   "author": "Johannes Garz <johannes@garz.dev> (https://garz.dev/)",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "dependencies": {
     "dotenv": "^16.3.1",
     "ts-node": "^10.9.1"
