--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "./build",
+    "outDir": "./lib",
     "module": "CommonJS",
     "moduleResolution": "node",
     "target": "es2015",
@@ -11,6 +11,6 @@
     "noImplicitAny": true,
     "strict": true
   },
-  "exclude": ["./node_modules", "./build"],
+  "exclude": ["./node_modules", "./lib"],
   "include": ["./src"]
 }
