--- a/package.json
+++ b/package.json
@@ -33,11 +33,8 @@
     "url": "https://github.com/garzj/node-event-subscriber/issues"
   },
   "homepage": "https://github.com/garzj/node-event-subscriber#readme",
-  "dependencies": {
-    "dotenv": "^16.3.1",
-    "ts-node": "^10.9.1"
-  },
   "devDependencies": {
+    "ts-node": "^10.9.1",
     "@jest/globals": "^29.5.0",
     "@types/node": "^20.3.2",
     "jest": "^29.5.0",
