--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,7 @@ jobs:
           node-version: '17.x'
           registry-url: 'https://registry.npmjs.org'
       - run: yarn
+      - run: yarn test
       - run: yarn build
       - run: npm publish
         env:
