--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "typescript": "^5.4.5"
   },
   "optionalDependencies": {
-    "tiny-typed-emitter": "^2.1.0"
+    "tiny-typed-emitter": "^2.1.0",
+    "typed-emitter": "^2.1.0"
   }
 }
