--- a/package.json
+++ b/package.json
@@ -35,11 +35,9 @@
     "@jest/globals": "^29.7.0",
     "@types/node": "^22.5.5",
     "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
-    "typescript": "^5.6.2"
-  },
-  "optionalDependencies": {
     "tiny-typed-emitter": "^2.1.0",
-    "typed-emitter": "^2.1.0"
+    "ts-jest": "^29.2.5",
+    "typed-emitter": "^2.1.0",
+    "typescript": "^5.6.2"
   }
 }
