--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "CommonJS",
     "moduleResolution": "node",
     "target": "es2015",
-    "lib": ["es6"],
+    "lib": ["es6", "dom"],
     "types": ["node"],
     "typeRoots": ["node_modules/@types"],
     "resolveJsonModule": true,
